update: Update API Docs for item-penjualans in swagger ui
